# GL-ski

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chocolatey-env-setup.ps1
Doc/: Regles Challenge Boule de Neige.odt
SDL2/lib/cmake/SDL2/: sdl2-config.cmake
blancClient/: CMakeLists.txt
blancClient/include/: libClient.h  my_header.h
blancClient/src/: CMakeLists.txt  libClient.c  main.c  main.cpp  my_functions.cpp
blancServeur/font/: .cache
